# python-package-example

./: Pipfile  README.md  pyproject.toml
.github/workflows/: build.yaml
src/examplepackagefb1258/: __init__.py  __main__.py  wisdom.py
src/pyfortunecookie/: __init__.py  __main__.py  core.py
tests/: test_core.py  test_wisdom.py
