[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfortunecookie"
description = "A fun fortune cookie generator with lucky number and color"
version = "0.1.0"
authors = [
  { name="SinaL0123", email="sl9608@nyu.edu" },
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["fortune", "fun", "demo"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/your-username/python-package-practice"
"Repository" = "https://github.com/your-username/python-package-practice.git"
"Bug Tracker" = "https://github.com/your-username/python-package-practice/issues"

[project.scripts]
pyfortunecookie = "pyfortunecookie.__main__:main"
